[WFLY-19658] Turn on compiler annotation processing on SE 23+